--- a/index.html
+++ b/index.html
@@ -611,9 +611,10 @@
         </div>
 
         <div class="qa-section">
-            <h3>💬 질문하기</h3>
+            <h3>💬 질문/채팅 하기</h3>
             <p style="color: #a0aec0; text-align: center; margin-bottom: 30px;">
-                발표 내용에 대해 궁금한 점이 있으시면 자유롭게 질문해주세요!
+                발표 내용에 대해 궁금한 점이 있으시면 자유롭게 질문해주세요! <br />
+                의미 없는 채팅도 좋습니다!
             </p>
 
             <div class="qa-form">
@@ -630,7 +631,7 @@
                     <input type="text" id="qa-name" placeholder="이름 또는 닉네임을 입력해주세요">
                 </div>
                 <div class="form-group">
-                    <label>질문</label>
+                    <label>질문/채팅</label>
                     <textarea id="qa-question" placeholder="질문 내용을 입력해주세요"></textarea>
                 </div>
                 <button class="submit-btn" onclick="submitQuestion()">질문 등록하기</button>
